# kokoro-reader

./: .env.example  .gitignore  README.md  article.md  convert_audio.py  publish_audio.py  pyproject.toml  test_readme_docs.py  test_text_to_speech.py  test_verify_audio.py  text_to_speech.py  verify_audio.py
.claude/skills/: article-tts-recording.md
docs/: adr-001-no-orchestration-script.md
tests/: test_convert_audio.py  test_publish_audio.py  test_readme_docs.py  test_text_to_speech.py  test_verify_audio.py
