[project]
name = "kokoro-tts"
version = "0.1.0"
description = "Text-to-Speech script using MLX Audio and Kokoro model for Apple Silicon Macs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "google-genai>=1.67.0",
    "misaki[en]",
    "mlx-audio",
    "numpy",
    "pydub",
    "python-dotenv>=1.2.2",
    "soundfile",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["."]
